--- a/styles.css
+++ b/styles.css
@@ -91,8 +91,8 @@ section {
     padding-top: 5rem;
     margin-top: 3rem;
     margin-bottom: 3rem;
-    background: url('img/m') top right no-repeat,
-    url('img/flor-esquerda.png') bottom left no-repeat;
+    background: url('img/musica-removebg-preview.png') top right no-repeat,
+    url('img/musica-removebg-preview.png') bottom left no-repeat;
     background-size: 180px 180px;
 }
 
